# fs

./: .mcp.json  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  clippy.toml
assets/: main.css
src/: main.rs
