[package]
name = "fs"
version = "0.1.0"
authors = ["jojongguk <jojongguk@polestargames.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = [] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle", 
  "FileSystemHandle",
  "FileSystemHandleKind",
  "FileSystemPermissionDescriptor",
  "FileSystemPermissionMode",
  "FileSystemWritableFileStream",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
